# Fintava-python

./: README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci-audit.yml
fintaPy/config/: authentication.py  environment.py
