[tool.poetry]
name = "finta-py"
version = "1.0"
description = "Python Library for Fintava APIs"
authors = ["musawakiliml"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
uuid6 = "^2024.7.10"
pydantic = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
