[tool.poetry]
name = "finta-py"
version = "1.0"
description = "Python Library for Fintava APIs"
authors = ["musawakiliml"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
uuid6 = "^2024.7.10"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.1"
ruff = "^0.8.5"
isort = "^5.13.2"
black = "^24.10.0"
autopep8 = "^2.3.1"
mypy = "^2.1.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.6"
mike = "^2.2.0"
httpx = "^0.28.1"
types-requests = "^2.33.0.20260518"
pre-commit = "^4.6.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
